+ links auto generation from list in gradle script + target platform cleanup & links resolution + multiple feature build (allElements.xml)
Signed-off-by: robin <diabeteman@gmail.com>